<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rename_bg"
    android:layout_margin="@dimen/dimen_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileRename"
        android:textStyle="bold"
        android:textSize="@dimen/size_18sp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:inputType="text"
        android:textSize="@dimen/size_15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rename_cancel"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/white"
            android:layout_weight="1"
            android:textSize="@dimen/size_16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rename_confirm"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@color/white"
            android:layout_weight="1"
            android:textSize="@dimen/size_16sp"
            style="@style/myStyle"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>